--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			href="https://fonts.gstatic.com"
 			crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
 			rel="stylesheet" />
 		<script
 			async
@@ -37,16 +37,31 @@
 			ullam et harum laudantium veritatis porro unde corporis, quas
 			cupiditate vero tenetur. Quam, at.
 		</p>
-		<p>At Mozilla, we're a global community of</p>
+		<p>At Mozilla, we’re a global community of</p>
+
 		<ul>
+			<!-- changed to list in the tutorial -->
 			<li>technologists</li>
 			<li>thinkers</li>
 			<li>builders</li>
 		</ul>
-		<p>working together…</p>
-		<a href="https://www.mozilla.org/en-US/about/manifesto/">
-			Mozilla Manifesto
-		</a>
+
+		<p>
+			working together to keep the Internet alive and accessible, so
+			people worldwide can be informed contributors and creators of the
+			Web. We believe this act of human collaboration across an open
+			platform is essential to individual growth and our collective
+			future.
+		</p>
+		<p>
+			Read the
+			<a href="https://www.mozilla.org/en-US/about/manifesto/"
+				>Mozilla Manifesto</a
+			>
+			to learn even more about the values and principles that guide the
+			pursuit of our mission.
+		</p>
+		<br />
 		<button>Change user</button>
 	</body>
 </html>
