--- a/index.html
+++ b/index.html
@@ -63,5 +63,18 @@
 		</p>
 		<br />
 		<button>Change user</button>
+		<br />
+		<h1>Some music</h1>
+		<p>
+			I really enjoy <strong>playing the drums</strong>. One of my
+			favorite drummers is Neal Peart, who used to play in the band
+			<a href="https://en.wikipedia.org/wiki/Rush_%28band%29">Rush</a>. My
+			favorite Rush album is currently
+			<a href="https://www.deezer.com/album/942295">Moving Pictures</a>.
+		</p>
+		<img
+			src="https://www.cygnus-x1.net/links/rush/images/albums/sectors/sector2-movingpictures-cover-s.jpg"
+			alt="Rush Moving Pictures album cover"
+			width="300" />
 	</body>
 </html>
