--- a/index.html
+++ b/index.html
@@ -76,5 +76,6 @@
 			src="https://www.cygnus-x1.net/links/rush/images/albums/sectors/sector2-movingpictures-cover-s.jpg"
 			alt="Rush Moving Pictures album cover"
 			width="300" />
+		<p>The end</p>
 	</body>
 </html>
